Removed getFirst method call to fix compilation error